# DDPM_vs_DDIM

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: bedroom.yaml  church.yaml  cifar10.yaml
notebooks/: 01_foundations_and_sanity.ipynb  02_eta_nfe_sweep.ipynb  03_inversion_and_interpolation.ipynb
results/: 02_eta_nfe_sweep.json
src/: __init__.py  interpolation.py  inversion.py  metrics.py  models.py  sampling.py  schedule.py  scheduler.py  utils.py
